--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,9 +8,9 @@ android {
         debug {
             storeFile file('debug.jks')
 //            storeFile file('D:\\tool\\tv_src\\default.jks')
-            storePassword 'default'
-            keyAlias 'default'
-            keyPassword 'default'
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
         }
     }
     compileSdkVersion 30
